update mysql_connector.version and user manual